Tue Sep 28 11:00:33 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/FreeTDS_w.def: add missing exports

Tue Sep 28 10:19:51 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: fix memory leak

Tue Sep 28 10:13:57 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix problem for UNI(VAR)CHAR encoding

Mon Sep 27 17:53:10 EDT 2010	JK Lowden <jklowden@freetds.org>
	* Nmakefile src/tds/config.c src/tds/mem.c
	- fix Win32 problems 

Mon Sep 27 09:25:08 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/iconv.c: add utf16 support to iconv replacement

Wed Sep 22 09:03:37 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/cancel.c src/dblib/unittests/done_handling.c:
	* src/odbc/unittests/array_out.c:
	- fix some portability issues with Solaris/SPARC (thanks to Peter
	  C. Norton)

Thu Sep 16 16:32:02 EDT 2010	JK Lowden <jklowden@freetds.org>
	* doc/bsqldb.txt src/apps/bsqldb.c
	- add -H hostname to override hostname sent to server

Thu Sep 16 14:30:15 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c:
	- update inline documentation for dbiscount (patch from LacaK)

Thu Sep 16 13:11:46 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsthread.h: init mutex fixes

Thu Sep 16 13:09:29 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/Makefile.am win32/dblib.def win32/msvc6/FreeTDS.dsw:
	* win32/msvc6/Makefile.am win32/msvc6/dblib_dll.dsp:
	- add project and definition file for dblib dll (patch from LacaK)

Thu Sep 16 09:44:12 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml:
	- add documentation for "enable gssapi delegation" option

Thu Sep 16 09:36:57 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c src/tds/gssapi.c:
	- add delegate option for Kerberos (patch from Peter C. Norton)
